--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/nss-cohort-2014-06-07/home-inventory",
   "dependencies": {
     "chalk": "^0.5.1",
+    "lodash": "^2.4.1",
     "mongodb": "^1.4.7",
     "request": "^2.38.0",
     "sync-prompt": "^0.4.1"
